<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="de.tum.in.repobruegge.pom17aprilsnow.flightapp.presentation.activities.AddFlightActivity"
    tools:showIn="@layout/activity_add_flight">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:columnCount="2"
        android:rowCount="4"
        android:orientation="vertical">

        <TextView
            android:id="@+id/from_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from_label"
            android:textSize="@dimen/label_add_flight_size"
            android:layout_column="0"
            android:layout_row="0"
            android:padding="@dimen/padding"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
           />
        <EditText
            android:id="@+id/fromText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_column="1"
            android:layout_row="0"
            android:padding="@dimen/padding"
            android:hint="@string/originHint"/>
        <TextView
            android:id="@+id/to_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_label"
            android:textSize="@dimen/label_add_flight_size"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            android:padding="@dimen/padding"
            android:layout_column="0"
            android:layout_row="1"
            />
        <EditText
            android:id="@+id/toText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:padding="@dimen/padding"
            android:layout_column="1"
            android:layout_row="1"
            android:hint="@string/destinationHint" />
        <TextView
            android:id="@+id/depart_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/depart_label"
            android:textSize="@dimen/label_add_flight_size"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            android:padding="@dimen/padding"
            android:layout_column="0"
            android:layout_row="2"/>
        <EditText
            android:id="@+id/departText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date"
            android:padding="@dimen/padding"
            android:layout_column="1"
            android:layout_row="2"
            android:hint="@string/departHint"/>
        <TextView
            android:id="@+id/return_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/return_label"
            android:textSize="@dimen/label_add_flight_size"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            android:padding="@dimen/padding"
            android:layout_column="0"
            android:layout_row="3"/>
        <EditText
            android:id="@+id/returnText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date"
            android:padding="@dimen/padding"
            android:layout_column="1"
            android:layout_row="3"
            android:hint="@string/returnHint"/>
    </GridLayout>

    <Button
        android:id="@+id/search_flights"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_search_flights"
        android:textSize="@dimen/button_font_size"
        />
</LinearLayout>
