<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            android:layout_margin="@dimen/cardview_default_elevation"
            android:layout_weight="2" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:context="de.tum.in.repobruegge.pom17aprilsnow.flightapp.presentation.activities.FlightDetailsActivity"
                tools:showIn="@layout/activity_flight_details">

                <TextView
                    android:id="@+id/label_from"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/string_flight_from"
                    android:textAppearance="@android:style/TextAppearance.Material.Large" />

                <TextView
                    android:id="@+id/label_date_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="@string/label_date_text"
                    android:textAppearance="@android:style/TextAppearance.Material.Large" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="0.2">

                    <TextView
                        android:id="@+id/label_start"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:text="@string/label_start_time_start_loc"
                        android:textAppearance="@android:style/TextAppearance.Material.Large" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="10000000"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/label_transfer"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/label_transfer"
                            android:gravity="center"
                            android:textAppearance="@android:style/TextAppearance.Material.Small" />

                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:layout_gravity="center"
                            app:srcCompat="@mipmap/ic_arrow_long_right_50px" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/label_dest"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/label_dest_loc_dest_time"
                        android:textAlignment="textEnd"
                        android:textAppearance="@android:style/TextAppearance.Material.Large" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="0.3">

                    <TextView
                        android:id="@+id/label_terminal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/label_terminal"
                        android:textAppearance="@android:style/TextAppearance.Material.Large" />

                    <TextView
                        android:id="@+id/label_flight_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/label_flight_number"
                        android:textAlignment="textEnd"
                        android:textAppearance="@android:style/TextAppearance.Material.Large" />

                </LinearLayout>

                <TextView
                    android:id="@+id/label_airline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="@string/label_airline"
                    android:textAppearance="@android:style/TextAppearance.Material.Large" />

                <TextView
                    android:id="@+id/label_weather"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_weather"
                    android:layout_weight="0.1"
                    android:textAppearance="@android:style/TextAppearance.Material.Large" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="0.2">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@android:drawable/presence_offline" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/label_weather_desc_and_temp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/label_weather_desc_and_temp"
                            android:textAppearance="@android:style/TextAppearance.Material.Large" />

                        <TextView
                            android:id="@+id/label_dest_time"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/label_local_time"
                            android:textAppearance="@android:style/TextAppearance.Material.Large" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_remove_from_trip"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:drawableLeft="@android:drawable/ic_menu_delete"
                android:text="@string/button_remove_from_trip" />

            <Button
                android:id="@+id/button_show_destination_map"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:drawableLeft="@android:drawable/ic_dialog_map"
                android:text="@string/button_show_destination_map" />

        </LinearLayout>
    </LinearLayout>


    <!--    <Button
            android:id="@+id/button_remove_from_trip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_remove_from_trip" />-->

    <!--    <Button
        android:id="@+id/button_show_destination_map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_show_destination_map" />-->

</RelativeLayout>
